--- a/Optica-template.tex
+++ b/Optica-template.tex
@@ -1,24 +1,11 @@
-\documentclass{optica-article}
+\documentclass{./packages/optica-article}
 
-%% Select the journal you're submitting to
-%% oe, boe, ome, optcon, opticajournal
-\journal{optcon}
-% Key:
-% Express journals must have the correct journal selected:
-% {oe} Optics Express
-% {boe} Biomedical Optics Express
-% {ome} Optical Material Express
-% {optcon} Optics Continuum
-% Other Optica journals may use:
-% {opticajournal} Applied Optics, Advances in Optics and Photonics, Journal of the Optical Society of America A/B, Optics Letters, Optica, Photonics Research
+\graphicspath{{./images}{./graphs}}
 
-% Uncomment if submitting to Photonics Research.
-% ONLY APPLICABLE FOR \journal{opticajournal}
-% \setprjcopyright
+\journal{opticajournal}
 
 % Set the article type
 \articletype{Research Article}
-% Note that article type is not required for Express journals (OE, BOE, OME and OPTCON)
 
 \usepackage{lineno}
 \linenumbers
@@ -66,7 +53,6 @@ Washington, DC 20036, USA\\
 
 This format will generate the following appearance:  
 
-\bigskip
 
 \author{Author One\authormark{1} and Author Two\authormark{2,*}}
 
@@ -79,7 +65,6 @@ Washington, DC 20036, USA\\
 
 \email{\authormark{*}opex@optica.org}}
 
-\medskip
 
 If other statements about author contribution and contact are needed, they can be added in addition to the corresponding author designation.
 \begin{verbatim}
@@ -96,7 +81,6 @@ Washington, DC 20036, USA\\
 
 This format will generate the following appearance:
 
-\medskip
 
 \author{Author One\authormark{1,3} and Author Two\authormark{2,3,*}}
 
@@ -105,7 +89,6 @@ Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA
 \authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
 \authormark{3}The authors contributed equally to this work.\\
 \authormark{*}opex@optica.org}
-\medskip
 
 \section{Abstract}
 The abstract should be limited to approximately 100 words. If the work of another author is cited in the abstract, that citation should be written out without a number, (e.g., journal, volume, first page, and year in square brackets [Opt. Express {\bfseries 22}, 1234 (2014)]), and a separate citation should be included in the body of the text. The first reference cited in the main text must be [1]. Do not include numbers, bullets, or lists inside the abstract.
@@ -195,19 +178,16 @@ include any additional details that may be relevant.
 
 \bmsection{Data availability} Data underlying the results presented in this paper are available in Dataset 1, Ref. [3].
 
-\bigskip
 
 \item When datasets are cited but not submitted as integral supplementary material, they must be cited in the DAS and should appear in the references.
 
 \bmsection{Data availability} Data underlying the results presented in this paper are available in Ref. [3].
 
-\bigskip
 
 \item If the data generated or analyzed as part of the research are not publicly available, that should be stated. Authors are encouraged to explain why (e.g.~the data may be restricted for privacy reasons), and how the data might be obtained or accessed in the future.
 
 \bmsection{Data availability} Data underlying the results presented in this paper are not publicly available at this time but may be obtained from the authors upon reasonable request.
 
-\bigskip
 
 \item If no data were generated or analyzed in the presented research, that should be stated.
 
@@ -251,32 +231,6 @@ Add references with BibTeX or manually.
 \cite{Zhang:14,OPTICA,FORSTER2007,Dean2006,testthesis,Yelin:03,Masajada:13,codeexample}
 
 %%%%%%%%%% If using BibTeX:
-\bibliography{sample}
-
-%%%%%%%%%% If preparing manually:
-% \begin{thebibliography}{1}
-% \newcommand{\enquote}[1]{``#1''}
-
-% \bibitem{Zhang:14}
-% Y.~Zhang, S.~Qiao, L.~Sun, Q.~W. Shi, W.~Huang, L.~Li, and Z.~Yang,
-%   \enquote{Photoinduced active terahertz metamaterials with nanostructured
-%   vanadium dioxide film deposited by sol-gel method,}
-%   {\protect\JournalTitle{Optics Express}} \textbf{22}, 11070--11078 (2014).
-
-% \bibitem{Optica}
-% {Optica}, \enquote{{Optica Publishing Group},}
-%   \url{http://www.opg.optica.org}.
-
-% \bibitem{FORSTER2007}
-% P.~Forster, V.~Ramaswamy, P.~Artaxo, T.~Bernsten, R.~Betts, D.~Fahey,
-%   J.~Haywood, J.~Lean, D.~Lowe, G.~Myhre, J.~Nganga, R.~Prinn, G.~Raga,
-%   M.~Schulz, and R.~V. Dorland, \enquote{Changes in atmospheric consituents and
-%   in radiative forcing,} in \enquote{Climate Change 2007: The Physical Science
-%   Basis. Contribution of Working Group 1 to the Fourth assesment report of
-%   Intergovernmental Panel on Climate Change,}  S.~Solomon, D.~Qin, M.~Manning,
-%   Z.~Chen, M.~Marquis, K.~B. Averyt, M.~Tignor, and H.~L. Miler, eds.
-%   (Cambridge University Press, 2007).
-
-% \end{thebibliography}
+\bibliography{bibliography}
 
 \end{document}
