Removed copyright note

--- a/report.tex
+++ b/report.tex
@@ -27,9 +27,9 @@
 %%%%%%%%%%%%%%%%%%% abstract %%%%%%%%%%%%%%%%
 %% [use \begin{abstract*}...\end{abstract*} if exempt from copyright]
 
-\begin{abstract}
+\begin{abstract*}
 \LaTeX{} manuscripts submitted to Optica Publishing Group journals may use these instructions and this universal template format. The template simplifies manuscript preparation and eases transfer between journals. \emph{Applied Optics}, JOSA A, JOSA B, \emph{Journal of Optical Communications and Networking}, and \emph{Photonics Research} authors should use the length-check template if a precise length estimate is needed. \emph{Optics Letters} authors and authors of short \emph{Optica} articles are encouraged to use the length-check template. Authors using this universal template will still need to adhere to article-length restrictions based on the final, published format.
-\end{abstract}
+\end{abstract*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%  body  %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
