Probando. Quito "{./graphs}" de \graphicspath por hacer una modificación sin importancia

--- a/report.tex
+++ b/report.tex
@@ -1,6 +1,6 @@
 \documentclass{./packages/optica-article}
 
-\graphicspath{{./images}{./graphs}}
+\graphicspath{{images/}}
 
 \journal{opticajournal}
 
