--- a/practica1/report.tex
+++ b/practica1/report.tex
@@ -1,6 +1,6 @@
-\documentclass{./packages/optica-article}
+\documentclass{../packages/optica-article}
 
-\graphicspath{{images/}}
+\graphicspath{{images/}{../images}}
 
 \journal{opticajournal}
 
@@ -17,8 +17,8 @@
 \author{Author One,\authormark{1} Author Two,\authormark{2,*} and Author Three\authormark{2,3}}
 
 \address{\authormark{1}Peer Review, Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-\authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-\authormark{3}Currently with the Department of Electronic Journals, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA}
+	\authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
+	\authormark{3}Currently with the Department of Electronic Journals, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA}
 
 \email{\authormark{*}opex@optica.org} %% email address is required; see note below about the corresponding author designation
 
@@ -28,7 +28,7 @@
 %% [use \begin{abstract*}...\end{abstract*} if exempt from copyright]
 
 \begin{abstract*}
-\LaTeX{} manuscripts submitted to Optica Publishing Group journals may use these instructions and this universal template format. The template simplifies manuscript preparation and eases transfer between journals. \emph{Applied Optics}, JOSA A, JOSA B, \emph{Journal of Optical Communications and Networking}, and \emph{Photonics Research} authors should use the length-check template if a precise length estimate is needed. \emph{Optics Letters} authors and authors of short \emph{Optica} articles are encouraged to use the length-check template. Authors using this universal template will still need to adhere to article-length restrictions based on the final, published format.
+	\LaTeX{} manuscripts submitted to Optica Publishing Group journals may use these instructions and this universal template format. The template simplifies manuscript preparation and eases transfer between journals. \emph{Applied Optics}, JOSA A, JOSA B, \emph{Journal of Optical Communications and Networking}, and \emph{Photonics Research} authors should use the length-check template if a precise length estimate is needed. \emph{Optics Letters} authors and authors of short \emph{Optica} articles are encouraged to use the length-check template. Authors using this universal template will still need to adhere to article-length restrictions based on the final, published format.
 \end{abstract*}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%  body  %%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -37,7 +37,7 @@ Adherence to the specifications listed in this template is essential for efficie
 
 \section{Corresponding author}
 
-We require manuscripts to identify a single corresponding author. The corresponding author typically is the person who submits the manuscript and handles correspondence throughout the peer review and publication process. 
+We require manuscripts to identify a single corresponding author. The corresponding author typically is the person who submits the manuscript and handles correspondence throughout the peer review and publication process.
 
 \begin{verbatim}
 \author{Author One\authormark{1} and Author Two\authormark{2,*}}
@@ -51,19 +51,19 @@ Washington, DC 20036, USA\\
 \email{\authormark{*}opex@optica.org}
 \end{verbatim}
 
-This format will generate the following appearance:  
+This format will generate the following appearance:
 
 
 \author{Author One\authormark{1} and Author Two\authormark{2,*}}
 
 \address{\authormark{1}Peer Review, Publications Department,
-Optica Publishing Group, 2010 Massachusetts Avenue NW,
-Washington, DC 20036, USA\\
-\authormark{2}Publications Department, Optica Publishing Group,
-2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-%\authormark{3}xyz@optica.org}
+	Optica Publishing Group, 2010 Massachusetts Avenue NW,
+	Washington, DC 20036, USA\\
+	\authormark{2}Publications Department, Optica Publishing Group,
+	2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
+	%\authormark{3}xyz@optica.org}
 
-\email{\authormark{*}opex@optica.org}}
+	\email{\authormark{*}opex@optica.org}}
 
 
 If other statements about author contribution and contact are needed, they can be added in addition to the corresponding author designation.
@@ -85,17 +85,17 @@ This format will generate the following appearance:
 \author{Author One\authormark{1,3} and Author Two\authormark{2,3,*}}
 
 \address{\authormark{1}Peer Review, Publications Department,
-Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-\authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-\authormark{3}The authors contributed equally to this work.\\
-\authormark{*}opex@optica.org}
+	Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
+	\authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
+	\authormark{3}The authors contributed equally to this work.\\
+	\authormark{*}opex@optica.org}
 
 \section{Abstract}
 The abstract should be limited to approximately 100 words. If the work of another author is cited in the abstract, that citation should be written out without a number, (e.g., journal, volume, first page, and year in square brackets [Opt. Express {\bfseries 22}, 1234 (2014)]), and a separate citation should be included in the body of the text. The first reference cited in the main text must be [1]. Do not include numbers, bullets, or lists inside the abstract.
 
 \begin{figure}[h!]
-\centering\includegraphics[width=7cm]{opticafig1}
-\caption{Sample caption (Fig. 2, \cite{Yelin:03}).}
+	\centering\includegraphics[width=7cm]{opticafig1}
+	\caption{Sample caption (Fig. 2, \cite{Yelin:03}).}
 \end{figure}
 
 
@@ -116,7 +116,7 @@ Figures and tables should be placed in the body of the manuscript. Standard \LaT
 \subsection{Supplementary materials in Optica Publishing Group journals}
 Our journals allow authors to include supplementary materials as integral parts of a manuscript. Such materials are subject to peer-review procedures along with the rest of the paper and should be uploaded and described using our Prism manuscript system. Please refer to the \href{https://opg.optica.org/submit/style/supplementary_materials.cfm}{Author Guidelines for Supplementary Materials in Optica Publishing Group Journals} for more detailed instructions on labeling supplementary materials and your manuscript.
 
-\textbf{Authors may also include Supplemental Documents} (PDF documents with expanded descriptions or methods) with the primary manuscript. At this time, supplemental PDF files are not accepted for partner titles, JOCN and \emph{Photonics Research}. To reference the supplementary document, the statement ``See Supplement 1 for supporting content.'' should appear at the bottom of the manuscript (above the References heading). 
+\textbf{Authors may also include Supplemental Documents} (PDF documents with expanded descriptions or methods) with the primary manuscript. At this time, supplemental PDF files are not accepted for partner titles, JOCN and \emph{Photonics Research}. To reference the supplementary document, the statement ``See Supplement 1 for supporting content.'' should appear at the bottom of the manuscript (above the References heading).
 
 \subsection{Sample Dataset Citation}
 
@@ -134,8 +134,8 @@ Our journals allow authors to include supplementary materials as integral parts 
 Equation numbers should appear at the right-hand margin, in
 parentheses:
 \begin{equation}
-J(\rho) =
- \frac{\gamma^2}{2} \; \sum_{k({\rm even}) = -\infty}^{\infty}
+	J(\rho) =
+	\frac{\gamma^2}{2} \; \sum_{k({\rm even}) = -\infty}^{\infty}
 	\frac{(1 + k \tau)}{ \left[ (1 + k \tau)^2 + (\gamma  \rho)^2  \right]^{3/2} }.
 \end{equation}
 
@@ -148,55 +148,55 @@ Eq. (2), and so on [or as inequality (1), etc., as appropriate].
 Backmatter sections should be listed in the order Funding/Acknowledgment/Disclosures/Data Availability Statement/Supplemental Document section. An example of backmatter with each of these sections included is shown below.
 
 \begin{backmatter}
-\bmsection{Funding}
-Content in the funding section will be generated entirely from details submitted to Prism. Authors may add placeholder text in the manuscript to assess length, but any text added to this section in the manuscript will be replaced during production and will display official funder names along with any grant numbers provided. If additional details about a funder are required, they may be added to the Acknowledgments, even if this duplicates information in the funding section. See the example below in Acknowledgements.
+	\bmsection{Funding}
+	Content in the funding section will be generated entirely from details submitted to Prism. Authors may add placeholder text in the manuscript to assess length, but any text added to this section in the manuscript will be replaced during production and will display official funder names along with any grant numbers provided. If additional details about a funder are required, they may be added to the Acknowledgments, even if this duplicates information in the funding section. See the example below in Acknowledgements.
 
-\bmsection{Acknowledgments}
-The section title should not follow the numbering scheme of the body of the paper. Additional information crediting individuals who contributed to the work being reported, clarifying who received funding from a particular source, or other information that does not fit the criteria for the funding block may also be included; for example, ``K. Flockhart thanks the National Science Foundation for help identifying collaborators for this work.'' 
+	\bmsection{Acknowledgments}
+	The section title should not follow the numbering scheme of the body of the paper. Additional information crediting individuals who contributed to the work being reported, clarifying who received funding from a particular source, or other information that does not fit the criteria for the funding block may also be included; for example, ``K. Flockhart thanks the National Science Foundation for help identifying collaborators for this work.''
 
-\bmsection{Disclosures}
-Disclosures should be listed in a separate nonnumbered section at the end of the manuscript. List the Disclosures codes identified on the \href{https://opg.optica.org/submit/review/conflicts-interest-policy.cfm}{Conflict of Interest policy page}, as shown in the examples below:
+	\bmsection{Disclosures}
+	Disclosures should be listed in a separate nonnumbered section at the end of the manuscript. List the Disclosures codes identified on the \href{https://opg.optica.org/submit/review/conflicts-interest-policy.cfm}{Conflict of Interest policy page}, as shown in the examples below:
 
-\medskip
+	\medskip
 
-\noindent ABC: 123 Corporation (I,E,P), DEF: 456 Corporation (R,S). GHI: 789 Corporation (C).
+	\noindent ABC: 123 Corporation (I,E,P), DEF: 456 Corporation (R,S). GHI: 789 Corporation (C).
 
-\medskip
+	\medskip
 
-\noindent If there are no disclosures, then list ``The authors declare no conflicts of interest.''
-
-
-\bmsection{Data Availability Statement}
-A Data Availability Statement (DAS) will be required for all submissions beginning 1 March 2021. The DAS should be an unnumbered separate section titled ``Data Availability'' that
-immediately follows the Disclosures section. See the \href{https://opg.optica.org/submit/review/data-availability-policy.cfm}{Data Availability Statement policy page} for more information.
-
-Optica has identified four common (sometimes overlapping) situations that authors should use as guidance. These are provided as minimal models, and authors should feel free to
-include any additional details that may be relevant.
-
-\begin{enumerate}
-\item When datasets are included as integral supplementary material in the paper, they must be declared (e.g., as "Dataset 1" following our current supplementary materials policy) and cited in the DAS, and should appear in the references.
-
-\bmsection{Data availability} Data underlying the results presented in this paper are available in Dataset 1, Ref. [3].
+	\noindent If there are no disclosures, then list ``The authors declare no conflicts of interest.''
 
 
-\item When datasets are cited but not submitted as integral supplementary material, they must be cited in the DAS and should appear in the references.
+	\bmsection{Data Availability Statement}
+	A Data Availability Statement (DAS) will be required for all submissions beginning 1 March 2021. The DAS should be an unnumbered separate section titled ``Data Availability'' that
+	immediately follows the Disclosures section. See the \href{https://opg.optica.org/submit/review/data-availability-policy.cfm}{Data Availability Statement policy page} for more information.
 
-\bmsection{Data availability} Data underlying the results presented in this paper are available in Ref. [3].
+	Optica has identified four common (sometimes overlapping) situations that authors should use as guidance. These are provided as minimal models, and authors should feel free to
+	include any additional details that may be relevant.
 
+	\begin{enumerate}
+		\item When datasets are included as integral supplementary material in the paper, they must be declared (e.g., as "Dataset 1" following our current supplementary materials policy) and cited in the DAS, and should appear in the references.
 
-\item If the data generated or analyzed as part of the research are not publicly available, that should be stated. Authors are encouraged to explain why (e.g.~the data may be restricted for privacy reasons), and how the data might be obtained or accessed in the future.
-
-\bmsection{Data availability} Data underlying the results presented in this paper are not publicly available at this time but may be obtained from the authors upon reasonable request.
-
-
-\item If no data were generated or analyzed in the presented research, that should be stated.
-
-\bmsection{Data availability} No data were generated or analyzed in the presented research.
-\end{enumerate}
+		      \bmsection{Data availability} Data underlying the results presented in this paper are available in Dataset 1, Ref. [3].
 
 
-\bmsection{Supplemental document}
-See Supplement 1 for supporting content. 
+		\item When datasets are cited but not submitted as integral supplementary material, they must be cited in the DAS and should appear in the references.
+
+		      \bmsection{Data availability} Data underlying the results presented in this paper are available in Ref. [3].
+
+
+		\item If the data generated or analyzed as part of the research are not publicly available, that should be stated. Authors are encouraged to explain why (e.g.~the data may be restricted for privacy reasons), and how the data might be obtained or accessed in the future.
+
+		      \bmsection{Data availability} Data underlying the results presented in this paper are not publicly available at this time but may be obtained from the authors upon reasonable request.
+
+
+		\item If no data were generated or analyzed in the presented research, that should be stated.
+
+		      \bmsection{Data availability} No data were generated or analyzed in the presented research.
+	\end{enumerate}
+
+
+	\bmsection{Supplemental document}
+	See Supplement 1 for supporting content.
 
 \end{backmatter}
 
