Updates from Overleaf

--- a/informe1.tex
+++ b/informe1.tex
@@ -49,8 +49,9 @@
 {\scshape\Large \textbf{Práctica 1:} Caracterización de sistemas de formación de imágenes\par}
 \rule{16 cm}{2 pt}
 \vfill
-{\Large \textbf{Alumnos:}\par Alejandro \textcolor{red}{apellidos} \par Adriana \textcolor{red}{apellidos} \par Carlos España Castaño \par}
-{\Large Fecha: 16 de noviembre de 2022 \par}
+{\Large \textbf{Alumnos:}\par Alejandro \textcolor \par Adriana Lorena Mamani Lazarte  \par
+\textcolor \par Carlos España Castaño \par}
+{\Large Fecha: 15 de noviembre de 2022 \par}
 \end{titlepage}
 
 
@@ -61,10 +62,9 @@
 
 
 \section{Introducción}
-En esta práctica vamos a caracterizar un sistema de formación de imágenes mediante la determinación experimental de su función de transferencia de modulación (MTF). Para ello utilizaremos un método directo (el test de barras) y un método indirecto (el test de borde). \par
+En esta práctica se caracterizo un sistema de formación de imágenes mediante la determinación experimental de su función de transferencia de modulación (MTF). Para ello utilizaremos un método directo (el test de barras) y un método indirecto (el test de borde). \par
 
-El sistema cuya MTF mediremos consiste en un objetivo de microscopio con apertura numérica $NA = 0,25$ y un aumento $10X$ (F10), y una cámara CCD con un tamaño de píxel de $s=4,65 \mu m$. Las imágenes captadas por la cámara se visualizarán en la pantalla del PC.
-
+El sistema cuya MTF medimos consistio en un objetivo de microscopio con apertura numérica $NA = 0,25$ y un aumento $10X$ (F10), y una cámara CCD con un tamaño de píxel de $s=4,65 \mu m$. Las imágenes captadas por la cámara se visualizaron en la pantalla del PC.
 
 
 
@@ -88,7 +88,7 @@ En la siguiente tabla se recogen medidas tomadas del perfil de intensidad para d
     \centering
     \begin{tabular}{|c|c|c|c|c|c|c|c|c|}
     \hline
-        Barras & $y_{min}$ & $y_{max}$ & Contraste & $x_{min}$ & $x_{max}$ & Nºperiodos & Periodo (px) & Frec. ($\frac{ciclos}{mm}$) \\ \hline
+        Barras & $y_{min}$ & $y_{max}$ & Contraste & $x_{min}$ & $x_{max}$ & Nºperiodos & Periodo (px) & Frec. ($\flatfrac{ciclos}{mm}$) \\ \hline
         A & 65 & 88 & 0,150 & 4 & 52 & 8 & 6,000 & 304,167 \\ \hline
         B & 65 & 101 & 0,217 & 7 & 73 & 9 & 7,333 & 248,864 \\ \hline
         C & 61 & 108 & 0,278 & 11 & 111 & 11 & 9,091 & 200,750 \\ \hline
@@ -130,7 +130,6 @@ Donde el periodo se obtiene dividiendo la diferencia $x_{max} - x_{min}$ entre e
 
 
 \subsection{Medida de la MTF mediante el test de borde (método indirecto)}
-
 
 
 
