Updates from Overleaf

--- a/practica1/report1.tex
+++ b/practica1/report1.tex
@@ -8,19 +8,14 @@
 \articletype{Research Article}
 
 \usepackage{lineno}
-\linenumbers
 
 \begin{document}
 
 \title{Universal manuscript template for Optica Publishing Group journals}
 
-\author{Author One,\authormark{1} Author Two,\authormark{2,*} and Author Three\authormark{2,3}}
+\author{Author One,\authormark{1} Author Two,\authormark{1} and Author Three\authormark{1}}
 
-\address{\authormark{1}Peer Review, Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-	\authormark{2}Publications Department, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA\\
-	\authormark{3}Currently with the Department of Electronic Journals, Optica Publishing Group, 2010 Massachusetts Avenue NW, Washington, DC 20036, USA}
-
-\email{\authormark{*}opex@optica.org} %% email address is required; see note below about the corresponding author designation
+\address{\authormark{1}Universidad Complutense de Madrid, Madrid, DC 28040, España}
 
 % \homepage{http:...} %% author's URL, if desired
 
