--- a/report2.tex
+++ b/report2.tex
@@ -1,6 +1,7 @@
-\documentclass{../packages/optica-article}
+% !TEX TS-program = pdflatexmk
+\documentclass{./packages/optica-article}
 
-\graphicspath{{images/}{../images}}
+\graphicspath{{images/}{practica2/images}}
 
 \journal{opticajournal}
 
